--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -5,4 +5,4 @@ do.jlink=true
 javac.debug=true
 javadoc.preview=true
 jlink.strip=false
-user.properties.file=C:\\Users\\moham\\AppData\\Roaming\\NetBeans\\25\\build.properties
+user.properties.file=/home/mohamed/.netbeans/26/build.properties
